fix: overflowing footer (#289)

--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -12,7 +12,7 @@
     var(--content-padding)
     var(--content-padding)
     calc(var(--header-items-height) + var(--content-padding));
-  width: 100vw;
+  width: 100%;
 
   p {
     display: inline-block;
